changed card formatting

--- a/portfolios/teamProfile.html
+++ b/portfolios/teamProfile.html
@@ -20,50 +20,39 @@
 
     <div id="cardHere">
     <div class="card m-3" style="width: 18rem;">
-<h5 class="card-header">fkja</h5>
+<h5 class="card-header">Jas</h5>
 <div class="card-body">
     <h5 class="card-title">Manager</h5>
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"> ID: fnak</li>
-        <li class="list-group-item"><a href="mailto:fkaj">Email fkaj</a> </li>
-        <li class="list-group-item"> Office Number: fknajn</li>
+        <li class="list-group-item"> ID: 1</li>
+        <li class="list-group-item"><a href="mailto:jasdjames@gmail.com">Email jasdjames@gmail.com</a> </li>
+        <li class="list-group-item"> Office Number: 7</li>
     </ul>
 
 </div>
 </div>,<div class="card m-3" style="width: 18rem;">
-<h5 class="card-header">fkaj</h5>
-<div class="card-body">
-    <h5 class="card-title">Intern</h5>
-    <ul class="list-group list-group-flush">
-        <li class="list-group-item"> ID: fa</li>
-        <li class="list-group-item"><a href="mailto:nfkd">Email nfkd</a> </li>
-        <li class="list-group-item"> Office Number: fnka</li>
-    </ul>
-
-</div>
-</div>,<div class="card m-3" style="width: 18rem;">
-<h5 class="card-header">fjakj</h5>
-<div class="card-body">
-    <h5 class="card-title">Intern</h5>
-    <ul class="list-group list-group-flush">
-        <li class="list-group-item"> ID: afnkaj</li>
-        <li class="list-group-item"><a href="mailto:fnklaj">Email fnklaj</a> </li>
-        <li class="list-group-item"> Office Number: nfa</li>
-    </ul>
-
-</div>
-</div>,<div class="card m-3" style="width: 18rem;">
-    <h5 class="card-header">fkja'</h5>
+    <h5 class="card-header">Jess</h5>
     <div class="card-body">
         <h5 class="card-title">Engineer</h5>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item"> ID: ffkna</li>
-            <li class="list-group-item"><a href="mailto:mnf">Email mnf</a> </li>
-            <li class="list-group-item"><a href="https://github.com/anfka"> GitHubUsername: anfka</a> </li>
+            <li class="list-group-item"> ID: 2</li>
+            <li class="list-group-item"><a href="mailto:jess@jas.com">Email jess@jas.com</a> </li>
+            <li class="list-group-item"><a href="https://github.com/jasdjames"> GitHubUsername: jasdjames</a> </li>
         </ul>
     
     </div>
-    </div>
+    </div>,<div class="card m-3" style="width: 18rem;">
+<h5 class="card-header">Robyn</h5>
+<div class="card-body">
+    <h5 class="card-title">Intern</h5>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item"> ID: 3</li>
+        <li class="list-group-item"><a href="mailto:robyn@jas.net">Email robyn@jas.net</a> </li>
+        <li class="list-group-item"> Office Number: University of Houston</li>
+    </ul>
+
+</div>
+</div>
    
 
     </div>
