readme with screencast

--- a/portfolios/teamProfile.html
+++ b/portfolios/teamProfile.html
@@ -22,36 +22,36 @@
     <div class="col-4 mb-3" id="cardHere">
     
 <div class="card m-3 " style="width: 18rem;">
-<h5 class="card-header bg-danger">JAs</h5>
+<h5 class="card-header bg-danger">Jasmine</h5>
 <div class="card-body">
     <h5 class="card-title">Manager</h5>
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"> ID: fkja</li>
-        <li class="list-group-item"><a href="mailto:ajkfj">Email ajkfj</a> </li>
-        <li class="list-group-item"> Office Number: fakjj</li>
+        <li class="list-group-item"> ID: 1</li>
+        <li class="list-group-item"><a href="mailto:jasdjames@gmail.com">Email jasdjames@gmail.com</a> </li>
+        <li class="list-group-item"> Office Number: 7</li>
     </ul>
 
     </div>
 </div>
 </div><div class="card m-3" style="width: 18rem;">
-<h5 class="card-header bg-success">fankjfa</h5>
+    <h5 class="card-header bg-primary">Robyn</h5>
+    <div class="card-body">
+        <h5 class="card-title">Engineer</h5>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item"> ID: 2</li>
+            <li class="list-group-item"><a href="mailto:jas@jascorp.com">Email jas@jascorp.com</a> </li>
+            <li class="list-group-item"><a href="https://github.com/jasdjames"> GitHubUsername: jasdjames</a> </li>
+        </ul>
+    
+    </div>
+    </div><div class="card m-3" style="width: 18rem;">
+<h5 class="card-header bg-success">Jasmine</h5>
 <div class="card-body">
     <h5 class="card-title">Intern</h5>
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"> ID: fnkaj</li>
-        <li class="list-group-item"><a href="mailto:fkaj">Email fkaj</a> </li>
-        <li class="list-group-item"> Office Number: fnka</li>
-    </ul>
-
-</div>
-</div><div class="card m-3" style="width: 18rem;">
-<h5 class="card-header bg-success">kfjan'</h5>
-<div class="card-body">
-    <h5 class="card-title">Intern</h5>
-    <ul class="list-group list-group-flush">
-        <li class="list-group-item"> ID: fak</li>
-        <li class="list-group-item"><a href="mailto:fjka">Email fjka</a> </li>
-        <li class="list-group-item"> Office Number: fan</li>
+        <li class="list-group-item"> ID: 3</li>
+        <li class="list-group-item"><a href="mailto:jfa">Email jfa</a> </li>
+        <li class="list-group-item"> Office Number: University of Houston</li>
     </ul>
 
 </div>
